[project]
name = "youtube-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docarray>=0.41.0",
    "ffmpeg>=1.4",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.11",
    "langchain-pinecone>=0.2.3",
    "openai-whisper>=20240930",
    "python-dotenv>=1.1.0",
    "pytube>=15.0.0",
    "pytubefix>=8.12.3",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "tiktoken>=0.9.0",
]
